modules/api/main/default/objects/api_LogEvent__e/api_LogEvent__e.object-meta.xml
<CustomObject>
    <label>API Log Event</label>
    <pluralLabel>API Log Events</pluralLabel>
</CustomObject>