modules/api/main/default/objects/api_LogEvent__e/fields/Body__c.field-meta.xml
<CustomField>
    <fullName>Body__c</fullName>
    <label>Body</label>
    <length>131072</length>
    <type>LongTextArea</type>
</CustomField>