modules/api/main/default/objects/api_LogEvent__e/fields/Message__c.field-meta.xml
<CustomField>
    <fullName>Message__c</fullName>
    <label>Message</label>
    <length>100000</length>
    <type>LongTextArea</type>
</CustomField>