modules/api/main/default/objects/api_LogEvent__e/fields/Method__c.field-meta.xml
<CustomField>
    <fullName>Method__c</fullName>
    <defaultValue>&apos;GET&apos;</defaultValue>
    <label>Method</label>
    <length>100</length>
    <required>true</required>
    <type>Text</type>
</CustomField>