modules/api/main/default/objects/api_LogEvent__e/fields/Params__c.field-meta.xml
<CustomField>
    <fullName>Params__c</fullName>
    <label>Params</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>